[gd_scene load_steps=20 format=3 uid="uid://dhkk37e2si0rm"]

[ext_resource type="Texture2D" uid="uid://3gh50gutf3wo" path="res://Assets/Prontos/chest.png" id="1_jc4tu"]
[ext_resource type="Script" uid="uid://c1qrw20qiu8wn" path="res://scripts/bau_arma.gd" id="1_utmvq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_utmvq"]
size = Vector2(54, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_fb3cw"]
atlas = ExtResource("1_jc4tu")
region = Rect2(672, 0, 112, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_egmnj"]
atlas = ExtResource("1_jc4tu")
region = Rect2(560, 0, 112, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_8or2y"]
atlas = ExtResource("1_jc4tu")
region = Rect2(448, 0, 112, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4g7n"]
atlas = ExtResource("1_jc4tu")
region = Rect2(336, 0, 112, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_5e3km"]
atlas = ExtResource("1_jc4tu")
region = Rect2(224, 0, 112, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qr8a"]
atlas = ExtResource("1_jc4tu")
region = Rect2(112, 0, 112, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_0mnn6"]
atlas = ExtResource("1_jc4tu")
region = Rect2(0, 0, 112, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_wfp2y"]
atlas = ExtResource("1_jc4tu")
region = Rect2(0, 0, 112, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qdtf"]
atlas = ExtResource("1_jc4tu")
region = Rect2(0, 0, 112, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_dslnu"]
atlas = ExtResource("1_jc4tu")
region = Rect2(112, 0, 112, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfyng"]
atlas = ExtResource("1_jc4tu")
region = Rect2(224, 0, 112, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_ugxpa"]
atlas = ExtResource("1_jc4tu")
region = Rect2(336, 0, 112, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_wukju"]
atlas = ExtResource("1_jc4tu")
region = Rect2(448, 0, 112, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xvgx"]
atlas = ExtResource("1_jc4tu")
region = Rect2(560, 0, 112, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_08bp7"]
atlas = ExtResource("1_jc4tu")
region = Rect2(672, 0, 112, 69)

[sub_resource type="SpriteFrames" id="SpriteFrames_qet6p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fb3cw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_egmnj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8or2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4g7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5e3km")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qr8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0mnn6")
}],
"loop": false,
"name": &"close",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wfp2y")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qdtf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dslnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfyng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ugxpa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wukju")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xvgx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08bp7")
}],
"loop": false,
"name": &"open",
"speed": 5.0
}]

[node name="bau_arma" type="Area2D" groups=["disfarce"]]
collision_layer = 8
collision_mask = 2
script = ExtResource("1_utmvq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-27, -17)
shape = SubResource("RectangleShape2D_utmvq")

[node name="sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(-26, -17.25)
scale = Vector2(0.535714, 0.5)
sprite_frames = SubResource("SpriteFrames_qet6p")
animation = &"idle"
autoplay = "idle"

[node name="chest_open" type="AudioStreamPlayer2D" parent="."]

[node name="chest_close" type="AudioStreamPlayer2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
